--- a/JLRS.cfg
+++ b/JLRS.cfg
@@ -1,4 +1,4 @@
-#JLRS
+#JLRS(YL contest)
 mycall	JA1ZLO;				
 wpm	30;				
 weight	50;				
@@ -57,14 +57,15 @@ lpt144	555;
 lpt430	555;
 ;
 
-dat	JLRS;		DAT FILE
+dat	yl;		DAT FILE
 spc	zlog;		SPC FILE
 sub	zlog;		SUB FILE
 ;mode	on;
 pxmulti	wpx;		PRIFIX MULTI
 sendnr	$S;		CONVCG 
-unlistedmulti on
-exit
-dll on
 PROV	;
 CITY	;
+
+unlistedmulti on
+exit
+dll	ylcontest.dll
